@@ -68,6 +68,7 @@ Template for new versions:
 - `regrass`: no longer add all compatible grass types when using ``--force`` without ``--new``
 - `regrass`: ``--mud`` now converts muddy slade to grass, consistent with normal DF behavior
 - `gui/pathable`: fix hang when showing trade depot wagon access and a trade depot is submerged under water
+- `gui/pathable`: fix incorrect calculation of wagon paths over stairs and through doors
 
 ## Misc Improvements
 - `sort`: can now search for stockpiles on the Places>Stockpile tab by name, number, or enabled item categories
